Use pydantic models instead of homegrown validation
