# common/models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  swagger.yaml
-#   timestamp: 2022-01-16T19:05:21+00:00
+#   timestamp: 2022-02-22T23:31:56+00:00
 
 from __future__ import annotations
 
@@ -590,6 +590,49 @@ class EligibleRolesModel(BaseModel):
 
 class EligibleRolesModelArray(BaseModel):
     roles: Optional[List[EligibleRolesModel]] = None
+
+
+class HubAccount(BaseModel):
+    name: Optional[str] = Field(
+        None,
+        description="Customer-specified or default hub account name (NoqCentralRole)",
+    )
+    account_id: Optional[str] = Field(None, description="AWS account id")
+    role_arn: Optional[str] = Field(None, description="ARN of the role")
+    external_id: Optional[str] = Field(
+        None,
+        description="Designated external identifier to provide a safeguard against brute force attempts",
+    )
+
+
+class SpokeAccount(BaseModel):
+    name: Optional[str] = Field(
+        None,
+        description="Customer-specified or default spoke account name (NoqSpokeRole); note this must be unique for each account",
+    )
+    account_id: Optional[str] = Field(None, description="AWS account id")
+    role_arn: Optional[str] = Field(None, description="ARN of the spoke role")
+    external_id: Optional[str] = Field(
+        None,
+        description="Designated external identifier to provide a safeguard against brute force attempts",
+    )
+    hub_account_arn: Optional[str] = Field(
+        None, description="Links to the designated hub role ARN"
+    )
+    master_for_account: Optional[bool] = Field(
+        False,
+        description="Optional value (defaults to false) to indicate whether this spoke role has master access rights on the account",
+    )
+
+
+class OrgAccount(BaseModel):
+    org_id: Optional[str] = Field(
+        None,
+        description="A unique identifier designating the identity of the organization",
+    )
+    account_id: Optional[str] = Field(None, description="AWS account id")
+    account_name: Optional[str] = Field(None, description="AWS account name")
+    owner: Optional[str] = Field(None, description="AWS account owner")
 
 
 class RequestModel(BaseModel):
